<resources>
    <string name="app_name">Skill-Ladder</string>
    <string name="Splash_Screen">Splash Screen</string>
    <string name="Lorem">Lorem Ipsum es simplemente el texto de relleno
        de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto
        de relleno estándar de las industrias desde el año 1500, cuando un
        impresor (N. del T. persona que se dedica a la imprenta) desconocido
        usó una galería de textos y los mezcló de tal manera que logró hacer
        un libro de textos especimen. No sólo  Fue popularizado en los 60s
        con la creación de las hojas "Letraset", las cuales contenian pasajes
        de Lorem Ipsum, y más recientement</string>

    <string name="GetStartTV1">Get Start With Us !</string>
    <string name="GetStartbtn01TV01">Improving skills and finding a job</string>
    <string name="GetStartbtn01TV02">Explore job opportunities and connect with employers.</string>
    <string name="GetStartbtn02TV01">Hire Talent</string>
    <string name="GetStartbtn02TV02">Post jobs and find skilled professionals.</string>

    <string name="Hello">Hello !</string>
    <string name="Greeting">Welcome to Skill-Ladder</string>

    <string name="userloginGreeting">Sign in to access lessons and job opportunities.</string>
    <string name="UserLoginTV1">User Login</string>
    <string name="UserLoginBtn">Login</string>
    <string name="GoSignUp">Don\'t have account ?  SignUp</string>

    <string name="SignUpTV1">User SignUp</string>
    <string name="usersignupGreeting">Register and take the first step towards success!</string>
    <string name="UserSignUpBtn">SignUp</string>
    <string name="GoLogIn">Alredy have account ? LogIn</string>

    <string name="companyLoginTV1">Company Login</string>
    <string name="companyloginGreeting">Access your dashboard and post new job opportunities.</string>
    <string name="companyLoginBtn">Login</string>
    <string name="GocompanySignUp">Don\'t have account ? SignUp</string>

    <string name="companySignUpTV1">Company SignUp</string>
    <string name="companysignupGreeting">Register your company and start hiring with ease!</string>
    <string name="companySignUpBtn">SignUp</string>
    <string name="GoCompanyLogIn">Alredy have account ? LogIn</string>

    <string name="UserProfileTV1">User Profile</string>
    <string name="UserProfileBtn01">Update Profile</string>
    <string name="UserProfileBtn02">Update Password</string>
    <string name="UserProfileUpdatePasswordBtn01">Update Password</string>

    <string name="CourseTitle">Course Title</string>
    <string name="CourseContinue">Continue ▶️</string>
    <string name="CourseBuy">Buy Course ️</string>

    <string name="JobTile">Job Title ️</string>

    <string name="lessonBuyTV01">Lesson Title ️</string>
    <string name="lessonBuydicription">Lesson description ️</string>
    <string name="lessonBuyBtn">Buy ️</string>


    <string name="JobViewHeader">Jobs View ️</string>

    <string name="BuyLesson">Buy Lesson ️</string>

    <string name="SearchTv">Search</string>

    <string name="MyLessonTv01">My Lessons</string>

    <string name="AdminLoginTv01">Admin Login</string>
    <string name="AdminLoginGreeting">"Welcome! Please log in to manage the system.</string>

    <string name="DashBoard">DashBoard</string>
    <string name="UserManage">User Manage</string>
    <string name="CompanyManage">Company Manage</string>
    <string name="LessonManage">Lessons Manage</string>
    <string name="AProfile">Admin profile</string>
    <string name="mOther">Other Manage</string>
    <string name="getReport">Get Reports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="HomeName">Hello Ravishka Indraji</string>
    <string name="HomeLatest">Latest Lessons</string>
    <string name="AdminApp">Admin</string>


</resources>