<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/AdminDashBoard"
        android:title="@string/DashBoard"
        android:icon="@drawable/dashboard"/>
    <item
        android:id="@+id/adminUserManage"
        android:title="@string/UserManage"
        android:icon="@drawable/users"/>
    <item
        android:id="@+id/AdminCompanyManage"
    android:title="@string/CompanyManage"
    android:icon="@drawable/buildingsico"/>
    <item
        android:id="@+id/AdminlessonManage"
        android:title="@string/LessonManage"
        android:icon="@drawable/document"/>
    <item
    android:id="@+id/AdminProfile"
    android:title="@string/AProfile"
    android:icon="@drawable/admin"/>
    <item
        android:id="@+id/ManageOther"
        android:title="@string/mOther"
        android:icon="@drawable/other"/>



</menu>