<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background_user01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLoginActivity">

    <TextView
        android:id="@+id/CompanySignUpTV01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/Hello"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CompanySignUpTV02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/Greeting"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CompanySignUpTV01" />

    <LinearLayout
        android:id="@+id/CompanyLinierLayout01"
        android:layout_width="0dp"
        android:layout_height="650dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/user_login_frame"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CompanySignUpTV02">

        <TextView
            android:id="@+id/CompanySignUpTV03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/UserLoginTV1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/CompanyLogineditText01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="text|textEmailAddress"
            android:padding="12dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/CompanyLogineditText02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="text|textPassword"
            android:padding="12dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/CompanyLoginBtn01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:backgroundTint="@color/UserLoginBtn"
            android:text="@string/UserLoginBtn"
            android:textSize="15sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/CompanyLogInTV04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/GoSignUp"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>