<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    tools:context=".GetStartActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/getStartCardView02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/GetStartTextView01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GetStartbtn02TV01"
                android:textAlignment="center"
                android:textColor="@color/UserLoginBtn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/GetStartTextView02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GetStartbtn02TV02"
                android:textAlignment="center"
                android:textColor="#555555"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/getStartCardView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="10dp"

        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/getStartCardView02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/GetStartTextView03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GetStartbtn01TV01"
                android:textAlignment="center"
                android:textColor="@color/UserLoginBtn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/GetStartTextView04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GetStartbtn01TV02"
                android:textAlignment="center"
                android:textColor="#555555"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/GetStartTV1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="176dp"
        android:layout_marginTop="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/light_bulb" />
</androidx.constraintlayout.widget.ConstraintLayout>